load("@bazel_gazelle//:def.bzl", "gazelle")
load("//:settings.bzl", "include_scanner_rule")
load("@bazel_skylib//rules:common_settings.bzl", "bool_flag")

# gazelle:prefix github.com/bazelbuild/reclient
# gazelle:exclude docker
# gazelle:exclude **/*.pb.go
gazelle(
    name = "gazelle",
)

platform(
    name = "x64_windows",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:windows",
    ],
    visibility = ["//visibility:public"],
)

config_setting(
    name = "windows",
    constraint_values = ["@platforms//os:windows"],
)

config_setting(
    name = "linux",
    constraint_values = ["@platforms//os:linux"],
)

config_setting(
    name = "macos",
    constraint_values = ["@platforms//os:macos"],
)

include_scanner_rule(
    name = "include_scanner",
    build_setting_default = "clangscandeps",
)

config_setting(
    name = "clangscandeps_input_processor_config",
    flag_values = {":include_scanner": "clangscandeps"},
)

config_setting(
    name = "clangscandeps_input_processor_config_windows",
    constraint_values = ["@platforms//os:windows"],
    flag_values = {
        ":include_scanner": "clangscandeps",
    },
)

config_setting(
    name = "goma_input_processor_config",
    flag_values = {":include_scanner": "goma"},
)

config_setting(
    name = "goma_input_processor_config_windows",
    constraint_values = ["@platforms//os:windows"],
    flag_values = {
        ":include_scanner": "goma",
    },
)

config_setting(
    name = "goma_input_processor_config_windows_dbg",
    constraint_values = ["@platforms//os:windows"],
    flag_values = {
        ":include_scanner": "goma",
    },
    values = {"features": "dbg"},
)

config_setting(
    name = "config_windows_dbg",
    constraint_values = ["@platforms//os:windows"],
    values = {"features": "dbg"},
)

bool_flag(
    name = "use_android_glibc",
    build_setting_default = False,
)

config_setting(
    name = "use_android_glibc_true",
    constraint_values = ["@platforms//os:linux"],
    flag_values = {
        ":use_android_glibc": "True",
        # TODO(b/330510996) validate if this works for goma scandeps
        ":include_scanner": "clangscandeps",
    },
)
