load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("//tools:build_defs.bzl", "go_proto_checkedin_test")

go_proto_checkedin_test(
    name = "proto_test",
    proto = ":auth_go_proto",
)

proto_library(
    name = "auth_proto",
    srcs = ["auth.proto"],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:timestamp_proto"],
)

go_proto_library(
    name = "auth_go_proto",
    importpath = "github.com/bazelbuild/reclient/api/auth",
    proto = ":auth_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "auth",
    embed = [":auth_go_proto"],
    importpath = "github.com/bazelbuild/reclient/api/auth",
    visibility = ["//visibility:public"],
)
