load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

# gazelle:resolve proto go/api/command/command.proto @com_github_bazelbuild_remote_apis_sdks//go/api/command:command_proto
# gazelle:resolve proto go go/api/command/command.proto @com_github_bazelbuild_remote_apis_sdks//go/api/command
# gazelle:resolve proto bq_table.proto @protoc_gen_bq_schema//:bq_proto
# gazelle:resolve proto go bq_table.proto @protoc_gen_bq_schema//:bq_go_proto

proto_library(
    name = "log_proto",
    srcs = ["log.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//api/stat:stat_proto",
        "@com_github_bazelbuild_remote_apis_sdks//go/api/command:command_proto",
        "@protoc_gen_bq_schema//:bq_proto",
    ],
)

go_proto_library(
    name = "log_go_proto",
    importpath = "github.com/bazelbuild/reclient/api/log",
    proto = ":log_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//api/stat",
        "@com_github_bazelbuild_remote_apis_sdks//go/api/command",
        "@protoc_gen_bq_schema//:bq_go_proto",
    ],
)

go_library(
    name = "log",
    embed = [":log_go_proto"],
    importpath = "github.com/bazelbuild/reclient/api/log",
    visibility = ["//visibility:public"],
)
