load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

# gazelle:resolve proto go/api/command/command.proto @com_github_bazelbuild_remote_apis_sdks//go/api/command:command_proto
# gazelle:resolve proto go go/api/command/command.proto @com_github_bazelbuild_remote_apis_sdks//go/api/command

proto_library(
    name = "proxy_proto",
    srcs = [
        "depscache.proto",
        "mismatch_ignore_rule.proto",
        "proxy.proto",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//api/log:log_proto",
        "//api/stats:stats_proto",
        "@com_github_bazelbuild_remote_apis_sdks//go/api/command:command_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

go_proto_library(
    name = "proxy_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "team/foundry-x/re-client/api/proxy",
    proto = ":proxy_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//api/log",
        "//api/stats",
        "@com_github_bazelbuild_remote_apis_sdks//go/api/command",
    ],
)

go_library(
    name = "proxy",
    embed = [":proxy_go_proto"],
    importpath = "team/foundry-x/re-client/api/proxy",
    visibility = ["//visibility:public"],
)
