load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("//tools:build_defs.bzl", "go_proto_checkedin_test")

# gazelle:resolve proto go/api/command/command.proto @com_github_bazelbuild_remote_apis_sdks//go/api/command:cmd_proto
# gazelle:resolve proto go go/api/command/command.proto @com_github_bazelbuild_remote_apis_sdks//go/api/command

go_proto_checkedin_test(
    name = "proto_test",
    proto = ":proxy_go_proto",
)

proto_library(
    name = "proxy_proto",
    srcs = [
        "depscache.proto",
        "mismatch_ignore_rule.proto",
        "proxy.proto",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//api/log:log_proto",
        "//api/stats:stats_proto",
        "@com_github_bazelbuild_remote_apis_sdks//go/api/command:cmd_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

go_proto_library(
    name = "proxy_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/bazelbuild/reclient/api/proxy",
    proto = ":proxy_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//api/log",
        "//api/stats",
        "@com_github_bazelbuild_remote_apis_sdks//go/api/command",
    ],
)

go_library(
    name = "proxy",
    embed = [":proxy_go_proto"],
    importpath = "github.com/bazelbuild/reclient/api/proxy",
    visibility = ["//visibility:public"],
)
